--- a/WhereAmI?!/app/src/main/res/values/colors.xml
+++ b/WhereAmI?!/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorDark">#343a40</color>
     <color name="colorLight">#f8f9fa</color>
+    <color name="colorMuted">#6c757d</color>
 </resources>
