--- a/WhereAmI/app/src/main/res/layout/activity_settings.xml
+++ b/WhereAmI/app/src/main/res/layout/activity_settings.xml
@@ -20,8 +20,8 @@
             android:textColor="@color/colorLight"
             android:textStyle="italic"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="10dp" />
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="10dp" />
 
         <Spinner
             android:id="@+id/spinner_method"
@@ -31,8 +31,8 @@
             android:background="@android:drawable/btn_dropdown"
             android:spinnerMode="dropdown"
             android:layout_marginTop="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp" />
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp" />
 
         <TextView
             android:id="@+id/textview_label_warning_change"
@@ -42,9 +42,9 @@
             android:text="@string/textview_label_warning_change"
             android:textColor="@color/colorMuted"
             android:textStyle="italic"
-            android:textSize="10sp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="10dp" />
+            android:textSize="12sp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="10dp" />
 
         <TextView
             android:id="@+id/textview_label_precision"
@@ -55,8 +55,8 @@
             android:textColor="@color/colorLight"
             android:textStyle="italic"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="10dp" />
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="10dp" />
 
         <Spinner
             android:id="@+id/spinner_precision"
@@ -66,8 +66,8 @@
             android:background="@android:drawable/btn_dropdown"
             android:spinnerMode="dropdown"
             android:layout_marginTop="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp" />
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp" />
 
         <TextView
             android:id="@+id/textview_label_warning_change_2"
@@ -77,9 +77,9 @@
             android:text="@string/textview_label_warning_change"
             android:textColor="@color/colorMuted"
             android:textStyle="italic"
-            android:textSize="10sp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="10dp" />
+            android:textSize="12sp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="10dp" />
 
         <Button
             android:id="@+id/button_save_settings"
@@ -87,8 +87,8 @@
             android:layout_height="50dp"
             android:layout_below="@+id/textview_label_warning_change_2"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:fontFamily="sans-serif-thin"
             android:text="@string/button_save_title"
             android:textSize="24sp" />
