--- a/WhereAmI/app/src/main/res/layout/activity_train.xml
+++ b/WhereAmI/app/src/main/res/layout/activity_train.xml
@@ -79,10 +79,28 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_below="@+id/linear_layout_row_column"
-            android:layout_margin="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:fontFamily="sans-serif-thin"
             android:text="@string/button_training_submit"
             android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/textview_horizontal_line"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_below="@id/button_add_training"
+            android:layout_marginTop="10dp"
+            android:background="@color/colorLight"/>
+
+        <TableLayout
+            android:id="@+id/table_samples"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/textview_horizontal_line"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"/>
 
     </RelativeLayout>
 
