Change to table visibility higher precision

--- a/WhereAmI/app/src/main/res/layout/activity_train.xml
+++ b/WhereAmI/app/src/main/res/layout/activity_train.xml
@@ -9,14 +9,14 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:id="@+id/linear_layout_row_column"
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
+
             android:layout_margin="10dp">
 
             <LinearLayout
@@ -93,14 +93,25 @@
             android:layout_marginTop="10dp"
             android:background="@color/colorLight"/>
 
-        <TableLayout
-            android:id="@+id/table_samples"
+        <ScrollView
+            android:id="@+id/scrollview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/textview_horizontal_line"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"/>
+            android:layout_height="fill_parent"
+            android:layout_below="@+id/textview_horizontal_line">
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
+
+            <TableLayout
+                android:id="@+id/table_samples"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"/>
+
+            </LinearLayout>
+
+        </ScrollView>
 
     </RelativeLayout>
 
