--- a/WhereAmI/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/WhereAmI/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,37 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="1269.2538"
+    android:viewportHeight="1269.2538">
+    <group android:translateX="209.42686"
+        android:translateY="209.42686">
+        <path
+            android:pathData="M0,0h850.4v850.4h-850.4z"
+            android:fillColor="#343A40"/>
+        <path
+            android:pathData="M425.2,425.2m-179.7,0a179.7,179.7 0,1 1,359.4 0a179.7,179.7 0,1 1,-359.4 0"
+            android:strokeWidth="37.6947"
+            android:fillColor="#00000000"
+            android:strokeColor="#FFFFFF"/>
+        <path
+            android:pathData="M425.2,425.2m-311.8,0a311.8,311.8 0,1 1,623.6 0a311.8,311.8 0,1 1,-623.6 0"
+            android:strokeWidth="39.0323"
+            android:fillColor="#00000000"
+            android:strokeColor="#FFFFFF"/>
+        <path
+            android:pathData="M298.1,298.1m-49.6,0a49.6,49.6 0,1 1,99.2 0a49.6,49.6 0,1 1,-99.2 0"
+            android:fillColor="#FFFFFF"/>
+        <path
+            android:pathData="M552.3,552.3m-49.6,0a49.6,49.6 0,1 1,99.2 0a49.6,49.6 0,1 1,-99.2 0"
+            android:fillColor="#FFFFFF"/>
+        <path
+            android:pathData="M645.7,204.7m-49.6,0a49.6,49.6 0,1 1,99.2 0a49.6,49.6 0,1 1,-99.2 0"
+            android:fillColor="#FFFFFF"/>
+        <path
+            android:pathData="M204.7,645.7m-49.6,0a49.6,49.6 0,1 1,99.2 0a49.6,49.6 0,1 1,-99.2 0"
+            android:fillColor="#FFFFFF"/>
+        <path
+            android:pathData="M425.2,425.2m-12,0a12,12 0,1 1,24 0a12,12 0,1 1,-24 0"
+            android:fillColor="#FFFFFF"/>
+    </group>
 </vector>
