--- a/BayesianLocalization/app/src/main/res/layout/activity_settings.xml
+++ b/BayesianLocalization/app/src/main/res/layout/activity_settings.xml
@@ -27,7 +27,7 @@
             android:id="@+id/button_reset_training"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_below="@+id/button_export"
+            android:layout_alignParentBottom="true"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
