--- a/BayesianLocalization/app/src/main/res/layout/activity_train.xml
+++ b/BayesianLocalization/app/src/main/res/layout/activity_train.xml
@@ -64,6 +64,41 @@
             android:fontFamily="sans-serif-thin"
             android:text="@string/button_training_submit"
             android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/textview_horizontal_line"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/button_add_training"
+            android:text="@string/textview_stats"
+            android:layout_marginTop="10dp"
+            android:background="@color/colorMuted"
+            android:textColor="@color/colorLight"
+            android:textAlignment="textStart"
+            android:padding="10dp"
+            android:textStyle="italic"/>
+
+        <ScrollView
+            android:id="@+id/scrollview"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_below="@+id/textview_horizontal_line"
+            android:padding="10dp">
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
+
+                <TableLayout
+                    android:id="@+id/table_samples"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"/>
+
+            </LinearLayout>
+
+        </ScrollView>
+
     </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
