--- a/ParticleFilters/app/src/main/res/drawable/cell_open.xml
+++ b/ParticleFilters/app/src/main/res/drawable/cell_open.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <solid android:color="@color/colorLight" />
+    <solid android:color="@color/colorDark" />
     <stroke
         android:width="1dp"
         android:color="@color/colorLight" ></stroke>
     <corners
-        android:bottomRightRadius="2dp"
-        android:bottomLeftRadius="2dp"
-        android:topLeftRadius="2dp"
-        android:topRightRadius="2dp"/>
+        android:bottomRightRadius="3dp"
+        android:bottomLeftRadius="3dp"
+        android:topLeftRadius="3dp"
+        android:topRightRadius="3dp"/>
 </shape>
