--- a/ParticleFilters/app/src/main/res/drawable/cell_closed.xml
+++ b/ParticleFilters/app/src/main/res/drawable/cell_closed.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/colorLight"/>
+    <solid android:color="@color/colorMuted"/>
     <stroke
-        android:width="1dp"
-        android:color="@color/colorLight" ></stroke>
+        android:width="2dp"
+        android:color="@color/colorMuted" ></stroke>
     <corners
         android:bottomRightRadius="3dp"
         android:bottomLeftRadius="3dp"
