--- a/ParticleFilters/app/src/main/res/drawable/cell_open.xml
+++ b/ParticleFilters/app/src/main/res/drawable/cell_open.xml
@@ -3,8 +3,8 @@
 
     <solid android:color="@color/colorDark" />
     <stroke
-        android:width="1dp"
-        android:color="@color/colorLight" ></stroke>
+        android:width="2dp"
+        android:color="@color/colorMuted" ></stroke>
     <corners
         android:bottomRightRadius="3dp"
         android:bottomLeftRadius="3dp"
