--- a/ParticleFilters/app/src/main/res/layout/activity_main.xml
+++ b/ParticleFilters/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginLeft="5dp"
+            android:layout_marginTop="-5dp"
             android:layout_alignParentTop="true"
             android:text="U" />
 
@@ -210,11 +211,12 @@
         <TextView
             android:id="@+id/textview_direction"
             android:layout_width="50dp"
-            android:layout_height="30dp"
+            android:layout_height="40dp"
             android:layout_marginBottom="10dp"
             android:layout_marginRight="5dp"
             android:layout_above="@+id/textview_steps"
             android:layout_alignParentRight="true"
+            android:lineSpacingMultiplier="1.25"
             android:textSize="9sp"
             android:background="@drawable/cell_open"
             android:textColor="@color/colorLight"
@@ -225,11 +227,12 @@
         <TextView
             android:id="@+id/textview_steps"
             android:layout_width="50dp"
-            android:layout_height="30dp"
+            android:layout_height="40dp"
             android:layout_marginBottom="10dp"
             android:layout_marginRight="5dp"
             android:layout_above="@+id/textview_azimuth"
             android:layout_alignParentRight="true"
+            android:lineSpacingMultiplier="1.25"
             android:textSize="9sp"
             android:background="@drawable/cell_open"
             android:textColor="@color/colorLight"
@@ -240,11 +243,12 @@
         <TextView
             android:id="@+id/textview_azimuth"
             android:layout_width="50dp"
-            android:layout_height="30dp"
+            android:layout_height="40dp"
             android:layout_marginBottom="10dp"
             android:layout_marginRight="5dp"
             android:layout_above="@+id/textview_particle_count"
             android:layout_alignParentRight="true"
+            android:lineSpacingMultiplier="1.25"
             android:textSize="9sp"
             android:background="@drawable/cell_open"
             android:textColor="@color/colorLight"
@@ -255,11 +259,12 @@
         <TextView
             android:id="@+id/textview_particle_count"
             android:layout_width="50dp"
-            android:layout_height="30dp"
+            android:layout_height="40dp"
             android:layout_marginBottom="0dp"
             android:layout_marginRight="5dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
+            android:lineSpacingMultiplier="1.25"
             android:textSize="9sp"
             android:background="@drawable/cell_open"
             android:textColor="@color/colorLight"
