Stop/reset button behavior change

--- a/ParticleFilters/app/src/main/res/layout/activity_main.xml
+++ b/ParticleFilters/app/src/main/res/layout/activity_main.xml
@@ -87,7 +87,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"
             android:textSize="10sp"
-            android:text="Reset" />
+            android:text="Stop" />
 
         <TextView
             android:id="@+id/textview_cell_A"
