Improvement for reliability, cleanup code, remove redundant classes

--- a/BayesianLocalizationApp3/app/src/main/res/layout/activity_settings.xml
+++ b/BayesianLocalizationApp3/app/src/main/res/layout/activity_settings.xml
@@ -24,6 +24,18 @@
             android:textSize="20sp" />
 
         <Button
+            android:id="@+id/button_import"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@+id/button_export"
+            android:fontFamily="sans-serif-thin"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:text="IMPORT FROM CSV"
+            android:textSize="20sp" />
+
+        <Button
             android:id="@+id/button_reset_training"
             android:layout_width="match_parent"
             android:layout_height="50dp"
